# Data-Collector-Script

./: .gitignore  README.md  README.rar
script/: database.db  pyproject.toml  script.py  test.py  test2.py
script/script_files/: data_collector.py  data_validator.py  db_manager.py  user_actions.py  user_validator.py
script/tests/: test_data_collector.py  test_data_validator.py  test_db_manager.py  test_user_actions.py  test_user_validator.py
script/tests/test_data/: test_users.json
