[tool.poetry]
name = "script task"
version = "0.1.0"
description = ""
authors = ["VoitecP <piwowarski.connect@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
faker = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
sqlalchemy = "^2.0.23"
pytest-sqlalchemy = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
